# price-tool

./: README.md  example.env  main.py  pyproject.toml  response.json  test_api.py
src/api/: routes.py
src/scraper/: base_scraper.py  scraper_manager.py
src/scraper/sites/: amazon.py  flipkart.py  generic_ai_scraper.py
src/utils/: ai_helper.py  google_custom_search.py  logger.py  selenium_fetcher.py
